fix: Account for scrollbar
- Using stable scrollbar gutter to prevent the layout from shifting

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .scrollbar-stable {
+    scrollbar-gutter: stable;
+  }
+}
+
 body {
   background-color: #f4f4f4;
   font-family: "Poppins", serif;
